live/lab/redis/1-netpol.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
  # name: any.redis-sentinel.tcp26379
# spec:
  # ingress:
  # - ports:
    # - port: 26379
      # protocol: TCP
  # podSelector:
    # matchLabels:
      # app: redis-sentinel
  # policyTypes:
  # - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
  # name: any.redis-sentinel.tcp6379
# spec:
  # ingress:
  # - ports:
    # - port: 6379
      # protocol: TCP
  # podSelector:
    # matchLabels:
      # app: redis-sentinel
  # policyTypes:
  # - Ingress
---
# Allows communication between redis instances for replication and such
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis.redis.tcp6379
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
---
# Allows communication between sentinel instances for coordination
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-sentinel.redis-sentinel.tcp26379
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: redis-sentinel
    ports:
    - port: 26379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis-sentinel
  policyTypes:
  - Ingress
---
# Allows communication from sentinel to redis for coordination and promotion
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-sentinel.redis.tcp6379
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: redis-sentinel
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
